--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
           
       - run: npm install
         
-      - run: npm run cy:cucumber
+      - run: npm run cy:run:cucumber
       
       - run: npm run report:cucumber
         
